# morphotree

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  conanfile.py  conaninfo.txt  graph_info.json  morphotree.cmake
debug/: morphotreemain
images/: 0967.pgm
include/morphotree/adjacency/: adjacency.hpp  adjacency4c.hpp  adjacency8c.hpp  adjacencyuc.hpp
include/morphotree/attributes/: areaComputer.hpp  attributeComputer.hpp  boundingboxComputer.hpp  countorExtraction.hpp  differenceAttributeComputer.hpp  numberOfDescendantsComputer.hpp  perimeterComputer.hpp  smoothnessContourComputer.hpp  topologicalHeightComputer.hpp  volumeComputer.hpp
include/morphotree/attributes/bitquads/: quadCountComputer.hpp  quadCountTreeOfShapesComputer.hpp  quads.hpp
include/morphotree/attributes/extinctionValues/: ExtinctionValueComputer.hpp  ExtinctionValueLeavesComputer.hpp
include/morphotree/attributes/extinction_values/: ExtinctionValueComputer.hpp
include/morphotree/core/: alias.hpp  box.hpp  convKernel.hpp  hqueue.hpp  io.hpp  point.hpp  sort.hpp  types.hpp
include/morphotree/filtering/: extinctionFilter.hpp  lexographicalFilter.hpp  lexographicallyFilter.hpp  progressiveDifferenceAttributeFilter.hpp  treeFilterRules.hpp
include/morphotree/filtering/globalOptimiser/: GlobalOptimisationFilter.hpp  MinCPerimeterWithAbsError.hpp  MinCPerimeterWithAbsErrorToS.hpp  MinCPerimeterWithAbsErrorToS.old.hpp  MinCPerimeterWithMSE.hpp  MinCPerimeterWithSSIM.hpp  MinCPerimeterWithSquaredErrorToS.hpp
include/morphotree/measure/: ssim.hpp
include/morphotree/tree/: ct_builder.hpp  mtree.hpp
include/morphotree/tree/treeOfShapes/: KGrid.hpp  kgrid.hpp  order_image.hpp  tos.hpp
licenses/: morphotree
python/: CMakeLists.txt  conanbuildinfo.txt  setup.py
python/include/: ctbuilderpy.hpp  mtreepy.hpp  pointpy.hpp
python/include/attributes/: ExtinctionValuepy.hpp  attributeComputerpy.hpp  boundingBoxComputerpy.hpp  differenceAttributeComputerpy.hpp  numberOfDescendantsComputerpy.hpp  smoothnessContourComputerpy.hpp  topologicalHeightComputerpy.hpp  volumeComputerpy.hpp
python/include/attributes/bitquads/: quadCountComputerpy.hpp  quadCountTreeOfShapesComputerpy.hpp
python/include/core/: hqueuepy.hpp  opaque_types.hpp
python/include/filtering/: extinctionFilterpy.hpp  lexographicalFilterpy.hpp  progressiveDifferenceAttributeFilterpy.hpp  treeFilterRulespy.hpp
python/include/filtering/globalOptimiser/: globalOptimiserspy.hpp
python/include/tree/treeOfShapes/: kgridpy.hpp  order_imagepy.hpp  tospy.hpp
python/morphotreepy/: CMakePresets.json  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  morphotree-Target-release.cmake  morphotree-config-version.cmake  morphotree-config.cmake  morphotree-release-x86_64-data.cmake  morphotreeTargets.cmake  pybind11-Target-release.cmake  pybind11-config-version.cmake  pybind11-config.cmake  pybind11-release-x86_64-data.cmake
python/pybind11/: conan_create_pybind.sh  conanfile.py
python/src/: ctbuilderpy.cpp  module.cpp  mtreepy.cpp  pointpy.cpp
python/src/attributes/: ExtinctionValuepy.cpp  attributeComputerpy.cpp  boundingBoxComputerpy.cpp  differenceAttributeComputerpy.cpp  numberOfDescendantsComputerpy.cpp  smoothnessContourComputerpy.cpp  topologicalHeightComputerpy.cpp  volumeComputerpy.cpp
python/src/attributes/bitquads/: quadCountComputerpy.cpp  quadCountTreeOfShapesComputerpy.cpp
python/src/core/: hqueuepy.cpp
python/src/filtering/: extinctionFilterpy.cpp  lexographicalFilterpy.cpp  progressiveDifferenceAttributeFilterpy.cpp  treeFilterRulespy.cpp
python/src/filtering/globalOptimiser/: globalOptimiserspy.cpp
python/src/tree/treeOfShapes/: kgridpy.cpp  order_imagepy.cpp  tospy.cpp
src/: CMakeLists.txt  main.cpp  main.cpp.old  main.cpp.old02  main.cpp.old10  main.cpp.old13  main.cpp.old14  main.cpp.old3  main.cpp.old4  main.cpp.old6  main.cpp.old7
src/adjacency/: adjacency4c.cpp  adjacency8c.cpp  adjacencyuc.cpp
src/attributes/bitquads/: quadCountTreeOfShapesComputer.cpp  quads.cpp
src/core/: ConvKernel.cpp  box.cpp
src/measure/: ssim.cpp
